0.7 (unreleased)
================


0.6 (2008-08-11)
================

 - Documentation changes only.
   [davisagli]


0.5 (2008-05-29)
================

 - Added uninstall entry point so that the omelette can be uninstalled on Windows without
   clobbering things outside the omelette path.
   [optilude]

 - Support Windows using NTFS junctions (see http://www.microsoft.com/technet/sysinternals/FileAndDisk/Junction.mspx)
   [optilude]

 - Ignore zipped eggs and fakezope2eggs-created links.
   [davisagli]

 - Added 'packages' option to allow merging non-eggified Python packages to any directory in the omelette
   (so that, for instance, the contents of Zope's lib/python can be merged flexibly).
   [davisagli]


0.4 (2008-04-07)
================

 - Added option to include Products directories.
   [davisagli]

 - Fixed ignore-develop option.
   [davisagli]


0.3 (2008-03-30)
================

 - Fixed test infrastructure.
   [davisagli]

 - Added option to ignore develop eggs
   [claytron]

 - Added option to ignore eggs
   [claytron]

 - Added option to override the default omelette location.
   [davisagli]


0.2 (2008-03-16)
================

 - Fixed so created directories are not normalized to lowercase.
   [davisagli]


0.1 (2008-03-10)
================

 - Initial basic implementation.
   [davisagli]

 - Created recipe with ZopeSkel.
   [davisagli]