@@ -1,1 +1,0 @@
-Code repository: http://svn.plone.org/svn/collective/buildout/collective.recipe.omelette/trunk
