@@ -11,7 +11,7 @@ Install a fancy omelette with an egg, some packages, and a product::
     ...
     ... [omelette]
     ... recipe = collective.recipe.omelette
-    ... eggs = omelettetests.egg1
+    ... eggs = egg.with.name.different.from.contents
     ... packages = %(test_dir)s/package .
     ... products = %(test_dir)s/Products
     ... """ % globals())
@@ -30,9 +30,11 @@ Now we have everything linked together in one place, pointing at the real locati
     d omelette
     >>> ls('parts/omelette')
     d Products
-    - __init__.py
+    - easy_install.py
     d omelettetests
+    - pkg_resources.py
     d setuptools
+    - site.py
     d subpackage
     >>> ls('parts/omelette/omelettetests/egg1')
     - __init__.py
@@ -81,7 +83,7 @@ stuff accidentally::
     ...
     ... [frittata]
     ... recipe = collective.recipe.omelette
-    ... eggs = omelettetests.egg1
+    ... eggs = egg.with.name.different.from.contents
     ... packages = %(test_dir)s/package .
     ... products = %(test_dir)s/Products
     ... """ % globals())
@@ -166,5 +168,7 @@ Or ignore all development eggs::
     ... """)
     >>> print system(buildout + ' -q')
     >>> ls('parts/omelette')
-    - __init__.py
+    - easy_install.py
+    - pkg_resources.py
     d setuptools
+    - site.py
